--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.12.1
 aniso8601==9.0.1
 bcrypt==4.0.1
 blinker==1.6.3
+certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
 Faker==19.12.1
 Flask==3.0.0
@@ -15,6 +17,7 @@ Flask-WTF==1.2.1
 greenlet==3.0.1
 gunicorn==21.2.0
 honcho==1.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 load-dotenv==0.1.0
@@ -26,9 +29,11 @@ PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.22
 SQLAlchemy-serializer==1.4.1
 typing_extensions==4.8.0
+urllib3==2.0.7
 Werkzeug==3.0.1
 WTForms==3.1.0
