--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "react-token-auth": "^2.3.8",
+    "reactstrap": "^9.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
