--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-image-resizer": "^1.3.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-token-auth": "^2.3.8",
     "reactstrap": "^9.2.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
